CSETWebNg/src/sass/styles.scss
/* ... */
.detail-standard-or-question-set {
  border: 2px solid $black;
  border-top: none;
  border-bottom: none;
  padding: 1em;
  box-shadow: 5px 0 5px $black;
}

.detail-selected-standards {
  border: 2px solid $black;
  padding: 1em;
  border-radius: 1.2em;
  border-top-left-radius: 0;
  box-shadow: 5px 5px 5px $black;
}

// Eval Against
///////////////////////////////////////////////////////////////////////
.eval-against-standard-label {
  text-align: center;
  border: 2px solid $black;
  border-top-left-radius: 1.2em;
  border-top-right-radius: 1.2em;
  background-color: $primary-color;
  padding: 1em;
  color: $white;
  box-shadow: 5px 0 5px $black;
}

.eval-against-standard {
  border: 2px solid $black;
  border-top: none;
  border-bottom: none;
  padding: 1em;
  box-shadow: 5px 0 5px $black;
}

.eval-against-graph-text {
  border: 2px solid $black;
  border-radius: 1.2em;
  border-top-left-radius: 0;
  padding: 1em;
  box-shadow: 5px 5px 5px $black;
}

// Question/Parameters
///////////////////////////////////////////////////////////////////////
.sub-me {
  text-decoration: underline;
  color: $link-color-dark;
  cursor: pointer;
}

// Results
///////////////////////////////////////////////////////////////////////
.overview-textarea-height {
  height: 200px;
}

.warning-text>div {
  margin-bottom: 1rem;
}

.warning-text>div:last-child {
  margin-bottom: 0;
}

// Dialogs
///////////////////////////////////////////////////////////////////////

// About
.about article {
  //width: 33.33%;
  margin-right: $spacer * 3;
}

.about article:nth-child(3) {
  margin-right: 0rem;
}

@media only screen and (max-width: 360px) {
  .about article {
    margin-right: 0rem;
  }
}

.about hr {
  border-top: 1px solid $gray-200;
  width: 100%;
  background-color: $gray-200;
  margin-left: 0;
}

.about .homeland-security {
  font-family: Joanna, "Times New Roman", Times, serif;
  font-size: 36px;
}

.about .nccic {
  font-family: "ITC Franklin Gothic", Arial, Times, serif;
  font-size: 30px;
}

.about article {
  max-width: 300px;
}

// Component Override
.component-override article {
  //width: 75%;
  margin-right: $spacer * 3;
}

.component-override article:nth-child(3) {
  margin-right: 0rem;
}

@media only screen and (max-width: 360px) {
  .component-override article {
    margin-right: 0rem;
  }
}

.component-override hr {
  border-top: 1px solid $gray-200;
  width: 100%;
  background-color: $gray-200;
  margin-left: 0;
}

.component-override .homeland-security {
  font-family: Joanna, "Times New Roman", Times, serif;
  font-size: 36px;
}

.component-override .nccic {
  font-family: "ITC Franklin Gothic", Arial, Times, serif;
  font-size: 30px;
}

.component-override article {
  max-width: 600px;
}

// Terms
.terms-dialog {
  //max-height: 300px;
  max-width: 600px;
  min-width: 100%;
}

.advisory-dialog {
  //max-height: 600px;
  max-width: 800px;
  min-width: 100%;
}

.alert-dialog,
.confirm-dialog {
  //max-height: 80vh;
  min-height: 100px;
  min-width: 100%;
}

.global-parameters-dialog {
  max-width: 800px;
}

.edit-user-dialog {
  max-width: 800px;
}

.license-dialog,
.ok-dialog {
  max-width: 500px;
}

.keyboard-shortcut-dialog {
  min-width: 100%;
}

/*

  TODO(mdc-migration): The following rule targets internal classes of dialog that may no longer apply for the MDC version.

*/
.mat-dialog-header {
  color: $gray-100;
  background-color: $primary-color;
  font-weight: 600;
}

/*

  TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.

*/
.upload-export .mat-mdc-list .mat-mdc-list-item .mat-list-item-content {
  padding: 0;
}

.mat-mdc-dialog-content {
  margin: 0 !important;
}

.mat-mdc-dialog-container {
  display: flex !important;
  flex: 1 1 auto;
  padding: 0 !important;
  max-width: 100% !important;
  border-radius: 0.25em;
}

.mat-mdc-dialog-container .mdc-dialog__content {
  color: black !important;
  letter-spacing: normal !important;
}

table.assessment-documents {
  width: 500px;
  max-height: 500px;
}

table.assessment-documents tr {
  box-sizing: content-box;
  height: 20px;
}

table.assessment-documents tr:nth-child(even) {
  background: $gray-100;
}

table.assessment-documents tr:nth-child(odd) {
  background: $gray-50;
}

// table.assessment-documents th:nth-child(1) {
//   padding-left: 12px;
// }

table.assessment-documents td,
table.assessment-documents th {
  padding: 0.5rem 0.4rem 0.5rem 0.4rem;
}

table.assessment-documents th {
  background-color: $secondary-color;
  color: $gray-50;
  font-weight: 500;
}

.assess-doc-icon {
  width: 40px;
  height: 40px;
}

.contact-add-fields input::-webkit-input-placeholder {
  padding-left: 4px;
}

.contact-add-fields input:-moz-placeholder {
  /* Firefox 18- */
  padding-left: 4px;
}

.contact-add-fields input::-moz-placeholder {
  /* Firefox 19+ */
  padding-left: 4px;
}

.contact-add-fields input:-ms-input-placeholder {
  padding-left: 4px;
}

///////////////////////////////////////////////////////////////////////

.icon-button {
  background-color: transparent;
  color: $secondary-color;
  border: none;
}

.icon-button:hover,
.icon-button:focus {
  color: $primary-color;
}

.icon-button-light {
  background-color: transparent;
  color: $gray-150;
  border: none;
}

.icon-button-light:hover,
.icon-button-light:focus {
  color: $white;
}

.sticky-sal {
  position: -webkit-sticky;
  /* Safari */
  position: sticky;
  top: 0;
  z-index: 999;
  background-color: $gray-50;
}

.fips-instructions {
  margin-top: 2em;
  border: 1px solid $secondary-color;
  border-radius: 0.4em;
  padding: 1em;
}

.answered-count {
  display: inline-block;
  font-weight: 400;
  color: $gray-50;
  background-color: $primary-900;
  border: 1px solid #ccc;
  text-align: center;
  vertical-align: middle;
  -webkit-user-select: none;
  user-select: none;
  padding: 0.27rem 0.75rem;
  font-size: 1.2rem;
  line-height: 1.5;
  height: fit-content;
  border-radius: 0.25rem;
}
/* ... */

